[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.2"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
cargo-watch = "8.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
time = "0.3.30"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }

